esp_OTA_SMT32/build/log/idf_py_stdout_output_2516
[1/15] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\esp\esp_OTA_SMT32\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.3_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.3/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/esp/esp_OTA_SMT32/build/bootloader/bootloader.bin"
Bootloader binary size 0x6880 bytes. 0x780 bytes (7%) free.
[2/13] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/esp_OTA_SMT32.c.obj
D:/esp/esp_OTA_SMT32/main/esp_OTA_SMT32.c: In function 'app_main':
D:/esp/esp_OTA_SMT32/main/esp_OTA_SMT32.c:33:13: warning: unused variable 'data' [-Wunused-variable]
   33 |     uint8_t data[BUF_UART_SIZE];
      |             ^~~~
[3/13] Building C object esp-idf/Response_command_ota/CMakeFiles/__idf_Response_command_ota.dir/responseCommand.c.obj
FAILED: esp-idf/Response_command_ota/CMakeFiles/__idf_Response_command_ota.dir/responseCommand.c.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20240530\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.3-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/esp/esp_OTA_SMT32/build/config -ID:/esp/esp_OTA_SMT32/component/Response_command_ota -IC:/Espressif/frameworks/esp-idf-v5.3/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/config/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/config/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/config/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/dma/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/ldo/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/port/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_rom/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.3/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/xtensa/deprecated_include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/esp32xx/include/sys -ID:/esp/esp_OTA_SMT32/component/HostOTA_ESP32 -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_driver_uart/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/vfs/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_timer/include -ID:/esp/esp_OTA_SMT32/component/Min -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -fmax-include-depth=500 -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/esp/esp_OTA_SMT32=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.3=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/Response_command_ota/CMakeFiles/__idf_Response_command_ota.dir/responseCommand.c.obj -MF esp-idf\Response_command_ota\CMakeFiles\__idf_Response_command_ota.dir\responseCommand.c.obj.d -o esp-idf/Response_command_ota/CMakeFiles/__idf_Response_command_ota.dir/responseCommand.c.obj -c D:/esp/esp_OTA_SMT32/component/Response_command_ota/responseCommand.c
D:/esp/esp_OTA_SMT32/component/Response_command_ota/responseCommand.c: In function 'processing_Data_receive_STM32':
D:/esp/esp_OTA_SMT32/component/Response_command_ota/responseCommand.c:7:25: error: 'len_payload' undeclared (first use in this function)
    7 |     for (int i = 0; i < len_payload; i++) {
      |                         ^~~~~~~~~~~
D:/esp/esp_OTA_SMT32/component/Response_command_ota/responseCommand.c:7:25: note: each undeclared identifier is reported only once for each function it appears in
D:/esp/esp_OTA_SMT32/component/Response_command_ota/responseCommand.c:8:25: error: 'min_payload' undeclared (first use in this function)
    8 |         printf("%02X ", min_payload[i]);  // In từng byte dưới dạng hex
      |                         ^~~~~~~~~~~
[4/13] Building C object esp-idf/HostOTA_ESP32/CMakeFiles/__idf_HostOTA_ESP32.dir/OTAHost_esp32.c.obj
ninja: build stopped: subcommand failed.
